--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,8 @@
 .second-class{
     background-color: yellow;
 }
+
+.first-class, .second-class{
+    font-size: 28px;
+    font-family: Helvetica, "Times New Roman", sans-serif;
+}
